# mpay

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  pyproject.toml  setup.cfg
mpay/: __init__.py  adm.py  alembic.ini  cli.py  config.py  const.py  db.py  gui.py  mpay.py  pay.py
mpay/alembic/: README  env.py
mpay/alembic/versions/: 6fb1631eadba_allow_order_with_zero_amount.py  931cbe1524ae_transaction_amount_not_negative.py  c7250639e926_init.py
tests/: test_mpay.py
